--- a/css/style-test.css
+++ b/css/style-test.css
@@ -37,11 +37,11 @@ body {
 }
 
 .navbar {
-  background: #090920;
+  background: #302b63;
 }
 
 .navbar-menu {
-  background-color: #090920;
+  background-color: #302b63;
 }
 
 .navbar-brand {
@@ -58,12 +58,12 @@ body {
 }
 
 .navbar-item:hover {
-  background: #090920; !important;
+  background: #0f0c29; !important;
   color: #c6447b !important;
 }
 
 .navbar-item:focus {
-  background: #090920; !important;
+  background: #0f0c29; !important;
   color: #c6447b !important;
 }
 
